fixing flex wrap

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,12 +1,11 @@
 .profile__feed {
-    padding: 1rem 2rem 1rem 2rem;
+    padding: 1rem 2rem 0 2rem;
     margin: 5em 7% 5em 7%;
     background-color: aliceblue;
     position: relative;
     display: flex;
     flex-direction: column;
     align-content: space-around;
-    flex-wrap: wrap;
 }
 
 #profile__close {
